exports[`Bankers Form display component rendering Renders as expected (compared to a snapshot) after user has joined game. 1`] = `
<form
  className="BankersForm"
  onSubmit={[Function]}>
  <h4>
    Bankers Celebration Dinner
  </h4>
  <p>
    ...but who should pay?
  </p>
  <label
    htmlFor="joinName">
    Join meal as
  </label>
  <input
    id="joinName"
    onChange={[Function]}
    type="text"
    value="" />
  <label
    htmlFor="bonusValue">
    Bonus
  </label>
  <input
    id="bonusValue"
    onChange={[Function]}
    type="text"
    value="" />
  <label
    className="BankersForm-inline"
    htmlFor="finished">
    Have all joined?
  </label>
  <input
    checked={false}
    className="BankersForm-inline"
    id="finished"
    onChange={[Function]}
    type="checkbox" />
  <p />
  <button
    disabled="disabled"
    style={
      Object {
        "marginRight": "2rem",
      }
    }
    type="submit">
    Send
  </button>
  <button
    disabled="disabled"
    onClick={[Function]}
    type="button">
    Reset
  </button>
  <p
    className="infoMessage">
    You have joined the meal as Bob.
  </p>
</form>
`;

exports[`Bankers Form display component rendering Renders as expected (compared to a snapshot) after winner has been chosen. 1`] = `
<form
  className="BankersForm"
  onSubmit={[Function]}>
  <h4>
    Bankers Celebration Dinner
  </h4>
  <p>
    ...but who should pay?
  </p>
  <label
    htmlFor="joinName">
    Join meal as
  </label>
  <input
    id="joinName"
    onChange={[Function]}
    type="text"
    value="" />
  <label
    htmlFor="bonusValue">
    Bonus
  </label>
  <input
    id="bonusValue"
    onChange={[Function]}
    type="text"
    value="" />
  <label
    className="BankersForm-inline"
    htmlFor="finished">
    Have all joined?
  </label>
  <input
    checked={false}
    className="BankersForm-inline"
    id="finished"
    onChange={[Function]}
    type="checkbox" />
  <p />
  <button
    disabled="disabled"
    style={
      Object {
        "marginRight": "2rem",
      }
    }
    type="submit">
    Send
  </button>
  <button
    disabled=""
    onClick={[Function]}
    type="button">
    Reset
  </button>
  <p
    className="infoMessage">
    A winner has been chosen.
  </p>
</form>
`;

exports[`Bankers Form display component rendering Renders as expected (compared to a snapshot) start of game, no proxies. 1`] = `
<form
  className="BankersForm"
  onSubmit={[Function]}>
  <h4>
    Bankers Celebration Dinner
  </h4>
  <p>
    ...but who should pay?
  </p>
  <label
    htmlFor="joinName">
    Join meal as
  </label>
  <input
    id="joinName"
    onChange={[Function]}
    type="text"
    value="" />
  <label
    htmlFor="bonusValue">
    Bonus
  </label>
  <input
    id="bonusValue"
    onChange={[Function]}
    type="text"
    value="" />
  <label
    className="BankersForm-inline"
    htmlFor="finished">
    Have all joined?
  </label>
  <input
    checked={false}
    className="BankersForm-inline"
    id="finished"
    onChange={[Function]}
    type="checkbox" />
  <p />
  <button
    disabled="disabled"
    style={
      Object {
        "marginRight": "2rem",
      }
    }
    type="submit">
    Send
  </button>
  <button
    disabled="disabled"
    onClick={[Function]}
    type="button">
    Reset
  </button>
  <p
    className="warnMessage">
    No proxies found.
  </p>
</form>
`;

exports[`Bankers Form display component rendering Renders as expected (compared to a snapshot) start of game. 1`] = `
<form
  className="BankersForm"
  onSubmit={[Function]}>
  <h4>
    Bankers Celebration Dinner
  </h4>
  <p>
    ...but who should pay?
  </p>
  <label
    htmlFor="joinName">
    Join meal as
  </label>
  <input
    id="joinName"
    onChange={[Function]}
    type="text"
    value="" />
  <label
    htmlFor="bonusValue">
    Bonus
  </label>
  <input
    id="bonusValue"
    onChange={[Function]}
    type="text"
    value="" />
  <label
    className="BankersForm-inline"
    htmlFor="finished">
    Have all joined?
  </label>
  <input
    checked={false}
    className="BankersForm-inline"
    id="finished"
    onChange={[Function]}
    type="checkbox" />
  <p />
  <button
    disabled="disabled"
    style={
      Object {
        "marginRight": "2rem",
      }
    }
    type="submit">
    Send
  </button>
  <button
    disabled="disabled"
    onClick={[Function]}
    type="button">
    Reset
  </button>
  <p
    className="infoMessage">
    
  </p>
</form>
`;
